# Search-Algo-Module-PY

./: LICENSE.md  README.md  setup.cfg
ai-search-algo/: graph.py  informed.py  local.py  main.py  uninformed.py
