[metadata]
name = ai_search_algo
version = 0.0.1
author = Alex Marinescu
author_email = karjhan1999@gmail.com
description = ai search algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Karjhan/search-algo-module-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True